--- a/javascript/1-maxItemAssociation/index.html
+++ b/javascript/1-maxItemAssociation/index.html
@@ -34,13 +34,14 @@
                 </select>
             </div>
             <div class="coll">
-                <label>Recommendations:</label>
+                <label>Recommendations:</label><br/>
                 <label id="recommendations"></label> 
             </div>
         </div>
         
     </div>    
     <script src="js/associations.js"></script>
+    
     <script src="js/sum.js"></script>
 </body>
 </html>
