--- a/javascript/3-getPath/index.html
+++ b/javascript/3-getPath/index.html
@@ -16,7 +16,7 @@
                 <a class="navbar-brand" href="/">Express HTML</a>
                 <ul class="nav navbar-nav">
                     <li id="liHome" class="active">
-                        <a href="/">Home</a>
+                        <a class="href-home" href="/">Home</a>
                     </li>
                     <li>
                         <a href="/about">About</a>
